<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Cat Roulette</string>


    <string name="action_settings">Settings</string>
    <string name="youtube_api_demo">YouTube API Demos</string>

    <string name="standalone_player_demo_name">Standalone Player</string>




    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_to">Skip To</string>
    <string name="seconds">secs</string>
    <string name="player_style">Player Style</string>
    <string name="def">Default</string>
    <string name="minimal">Minimal</string>
    <string name="chromeless">Chromeless</string>

    <string name="play_video">Get cat video</string>
    <string name="play_playlist">Play playlist</string>
    <string name="play_video_list">Play video list</string>
    <string name="start_index">Start index</string>
    <string name="start_time">Start time (sec)</string>
    <string name="autoplay">Autoplay</string>
    <string name="lightbox_mode">Lightbox mode</string>

    <string name="intent_select">Please select an action:</string>
    <string name="intent_disabled">This intent is not supported with the currently installed version of YouTube.</string>
    <string name="youtube_currently_installed">YouTube version installed on this device: <xliff:g id="youtube_version">%1$s</xliff:g>.</string>
    <string name="youtube_not_installed">YouTube is not installed on this device.</string>

    <string name="fullscreen_tutorial">This is a demo which shows how to handle fullscreen behaviour. This activity has differents layouts for portrait, landscape and fullscreen. The user can enter fullscreen either by using the player controller or programmatically by the programmer (here using a button). If your activity does not have a landscape layout, you can choose to automatically enter fullscreen when the device is rotated to landscape orientation.</string>
    <string name="enter_fullscreen">Enter Fullscreen</string>
    <string name="landscape_fullscreen">Always fullscreen in landscape</string>

    <string name="actionbar_tutorial">This is a demo which shows how to use the ActionBar as an overlay when the video is playing in fullscreen. The actionbar will automatically fade away along with the player controls when the video is being played in fullscreen. While not in fullscreen the Actionbar is visible and does not overlay any of the views.</string>

    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="Choose_Cats">Choose Cats</string>
    <string name="exit">Exit</string>
</resources>
